# libkcsdr

./: .gitignore  CMakeLists.txt  libkcsdr.pc.in  re.txt
src/: kcsdr.c
utils/kcsdr_info/: CMakeLists.txt
utils/kcsdr_info/src/: main.cpp
